{
    "name": "RegisterActionsKeyboardMouse",
    "maps": [
        {
            "name": "RegisterShapeTool",
            "id": "aa242329-f397-4a85-96c0-ef25358adffe",
            "actions": [
                {
                    "name": "BeginRegister",
                    "type": "Button",
                    "id": "c11d3ae5-e311-481c-877f-3dbebb105076",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Draw",
                    "type": "Value",
                    "id": "f5b1ffab-eb5b-4280-997c-77a802a95094",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EndRegister",
                    "type": "Button",
                    "id": "2bfa408c-f333-4e3f-afab-b80e3df8256d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ViewHistory",
                    "type": "Button",
                    "id": "c8ee0a04-b952-48af-97e5-f324d7cd458a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "326cc5a6-9d10-4dbe-aae5-32a976af1682",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BeginRegister",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "596bc69c-b1c3-49aa-a3b7-0be9130decc7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "25bdbb9a-7b2c-46d2-bbae-35f226855479",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "77f90fcb-cf21-499e-ba7a-e0cb7b9fea94",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9802811c-ea42-4e44-b144-9c682e199876",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "81863e40-aff9-4aed-a62a-913bdee6fa0f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4185c9fb-e5c5-4831-a475-35dc1fce4134",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndRegister",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fa317f7-a1a1-492a-b638-85c38cc1e4d9",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewHistory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}